--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,4 +20,6 @@
         <activity android:name=".DeviceScreen"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
 </manifest>
