--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".SignalsScreen" />
         <activity android:name=".NetworkScreen" />
-        <activity android:name=".DeviceScreen"></activity>
+        <activity android:name=".DeviceScreen" />
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
